--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,16 @@
 theme: jekyll-theme-cayman
 title: Welcome To Dominick DiTucci's Homepage!
 description: Feel free to check out my projects and keep coming back to see what's new
+
+
+## Welcome to my page!
+
+I'm still working on a lot of things, including expanding this page and listing more projects I've completed. 
+
+### <u>Projects</u>
+<ul>
+  <li> [Salary Prediction](https://github.com/dditucci/Salary-Prediction-Portfolio) </li>
+  <li> More coming soon! </li>
+  </ul>
+  
+Feel free to check out my [GitHub Profile](https://github.com/dditucci) or [LinkedIn Profile](https://www.linkedin.com/in/dominick-ditucci/)
