--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ I'm still working on a lot of things, including expanding this page and listing 
 
 ### <u>Projects</u>
 <ul>
-  <li><a href="https://github.com/dditucci/Salary-Prediction-Portfolio"> Salary Prediction Project</a></li>
+  <li><a href="https://github.com/dditucci/Salary-Prediction-Portfolio"></a> Salary Prediction Project</li>
   <li> More coming soon! </li>
   </ul>
   
