--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,10 @@ I'm still working on a lot of things, including expanding this page and listing 
 
 ### <u>Projects</u>
 <ul>
-  <li><a href="https://github.com/dditucci/Salary-Prediction-Portfolio"></a> Salary Prediction Project</li>
+  <li>
+  <a href="https://github.com/dditucci/Salary-Prediction-Portfolio"></a> Salary Prediction Project
+  </li>
   <li> More coming soon! </li>
   </ul>
   
-Feel free to check out my [GitHub Profile](https://github.com/dditucci) or [LinkedIn Profile](https://www.linkedin.com/in/dominick-ditucci/)
+Visit my [GitHub](https://github.com/dditucci) or [LinkedIn](https://www.linkedin.com/in/dominick-ditucci/) profiles!
