--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ I'm still working on a lot of things, including expanding this page and listing 
 ### <u>Projects</u>
 <ul>
   <li>
-  <a href="https://github.com/dditucci/Salary-Prediction-Portfolio"></a> Salary Prediction Project
+  Salary Prediction Project: https://github.com/dditucci/Salary-Prediction-Portfolio
   </li>
   <li> More coming soon! </li>
   </ul>
