Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Welcome To Dominick DiTucci's Homepage!
 description: Feel free to check out my projects and keep coming back to see what's new
 
