--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ theme: jekyll-theme-slate
 title: Welcome To Dominick DiTucci's Homepage!
 description: Feel free to check out my projects and keep coming back to see what's new
 
-
-## Welcome to my page!
+# Welcome to my page!
 I'm still working on a lot of things, including expanding this page and listing more projects I've completed. 
 
 ### <u>Projects</u>
