--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 theme: jekyll-theme-slate
 title: Welcome To Dominick DiTucci's Homepage!
 description: Feel free to check out my projects and keep coming back to see what's new
-
+<body>
 # Welcome to my page!
+I'm still working on a lot of things including expanding this page and listing more projects I've completed. 
 
 ### <u>Projects</u>
 <ul>
-  <li>
-  [Salary Prediction Project](https://github.com/dditucci/Salary-Prediction-Portfolio)
-  </li>
+  <li>[Salary Prediction Project](https://github.com/dditucci/Salary-Prediction-Portfolio)</li>
   <li> More coming soon! </li>
   </ul>
   
 Visit my [GitHub](https://github.com/dditucci) or [LinkedIn](https://www.linkedin.com/in/dominick-ditucci/) profiles!
+</body>
