--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,11 @@ title: Welcome To Dominick DiTucci's Homepage!
 description: Feel free to check out my projects and keep coming back to see what's new
 
 # Welcome to my page!
-'''I'm still working on a lot of things including expanding this page and listing more projects I've completed.'''
+
+I'm still working on a lot of things including expanding this page and listing more projects I've completed.
 
 ### <u>Projects</u>
+
 <ul>
   <li>[Salary Prediction Project](https://github.com/dditucci/Salary-Prediction-Portfolio)</li>
   <li> More coming soon! </li>
