--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: Feel free to check out my projects and keep coming back to see what
 
 # Welcome to my page!
 
-I'm still working on a lot of things including expanding this page and listing more projects I've completed.
+I\'m still working on a lot of things including expanding this page and listing more projects I\'ve completed\.
 
 ### <u>Projects</u>
 
