--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,7 @@ description: Feel free to check out my projects and keep coming back to see what
 I\'m still working on a lot of things including expanding this page and listing more projects I\'ve completed\.
 
 ### <u>Projects</u>
-
-<ul>
-  <li>[Salary Prediction Project](https://github.com/dditucci/Salary-Prediction-Portfolio)</li>
-  <li> More coming soon! </li>
-  </ul>
+*[Salary Prediction Project](https://github.com/dditucci/Salary-Prediction-Portfolio)
+*More coming soon! 
   
 Visit my [GitHub](https://github.com/dditucci) or [LinkedIn](https://www.linkedin.com/in/dominick-ditucci/) profiles!
