--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: Feel free to check out my projects and keep coming back to see what
 
 # Welcome to my page!
 
-I\'m still working on expanding this page and adding more projects as they are completed\.
+##### I'm still working on expanding this page and adding more projects as they are completed.
 
 ## <u>Projects</u>
 * [Salary Prediction Model](https://github.com/dditucci/salary-prediction-portfolio)
