--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome To <br> Dominick DiTucci's Homepage!
+title: <center>Welcome To</center> <br> <center>Dominick DiTucci's Homepage!</center>
 description: Feel free to check out my projects and keep coming back to see what's new
