--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
-title: <center>Welcome To Dominick DiTucci's Homepage!</center>
+title: <center>Welcome To </center>
+title: <center> Dominick DiTucci's Homepage!</center>
 description: <center>Feel free to check out my projects and keep coming back to see what's new</center>
