--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-<h2 style="color:white;"><center>Welcome To </center></h2>
+title: <h2 style="color:white;"><center>Welcome To </center></h2>
 <h1 style="color:white;"><center>Dominick DiTucci's Homepage!</center></h1>
 description: <center>Feel free to check out my projects and keep coming back to see what's new</center>
