--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-merlot
 title: <h2 style="color:white;"><center>Welcome To </center></h2>
 description: <h1 style="color:white;"><center>Dominick DiTucci's Homepage!</center></h1><br><center><h3 style="color:white;">Feel free to check out my projects and keep coming back to see what's new</center></h3>
