--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
-title: <h1 style="color:white;"><center>Welcome To </center></h1>
-description: <h1 style="color:white;"><center>Dominick DiTucci's Homepage!</center></h1><br><center><h3 style="color:white;">Feel free to check out my projects and keep coming back to see what's new</center></h3>
+title: <h1 style="color:white;"><center>Dominick DiTucci</center></h1><br><h2 style="color:white;"><center>Data Science & Analytics</center></h2>
+description: <center><h3 style="color:white;">Feel free to check out my projects and keep coming back to see what's new</center></h3>
