--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
-title: <h1 style="color:white;"><center>Dominick DiTucci</center></h1>
+title: <h1 style="color:white;"><center>Dominick Russo</center></h1>
 description: <center><h3 style="color:white;">Data Analytics & Engineering Portfolio</center></h3>
